lib_LTLIBRARIES += src/libcmc.la

nodist_include_HEADERS += src/cmc_ac_config.h

include_HEADERS += src/cmc.hxx \
src/cmc_config.h \
src/utilities/cmc_constants_definitions.h \
src/utilities/cmc_log_functions.hxx \
src/utilities/cmc_fallbacks.h \
src/utilities/cmc_vector_view.hxx \
src/utilities/cmc_utilities.hxx \
src/utilities/cmc_compression_settings.hxx \
src/utilities/cmc_dimension_interval.hxx \
src/utilities/cmc_geo_domain.hxx \
src/utilities/cmc_hyperslab.hxx \
src/utilities/cmc_cart_coordinate.hxx \
src/utilities/cmc_input_variable_forward.hxx  \
src/utilities/cmc_input_variable.hxx  \
src/utilities/cmc_bit_vector.hxx \
src/utilities/cmc_bit_map.hxx \
src/utilities/cmc_huffman.hxx \
src/utilities/cmc_arithmetic_encoder.hxx \
src/utilities/cmc_ac_model.hxx \
src/utilities/cmc_iface_entropy_alphabet.hxx \
src/utilities/cmc_variable_utilities.hxx \
src/utilities/cmc_error_domain.hxx \
src/utilities/cmc_geo_utilities.hxx \
src/utilities/cmc_error_domain_functions.hxx \
src/utilities/cmc_iface_compression_adapt_data.hxx \
src/utilities/cmc_endian.hxx \
src/utilities/cmc_byte_iteration.hxx \
src/utilities/cmc_byte_value.hxx \
src/utilities/cmc_byte_compression_values.hxx \
src/utilities/cmc_arithmetic_encoding_frequency_model.hxx \
src/utilities/cmc_entropy_coder.hxx \
src/utilities/cmc_arithmetic_encoding.hxx \
src/utilities/cmc_interpolation_fn.hxx \
src/utilities/cmc_compression_schema.hxx \
src/utilities/cmc_serialization.hxx \
src/utilities/cmc_multi_res_extraction_util.hxx \
src/utilities/cmc_byte_compression_arithmetic_encoding_frequency_model.hxx \
src/utilities/cmc_byte_compression_arithmetic_encoding.hxx \
src/utilities/cmc_multi_res_compression_entropy_alphabet.hxx \
src/utilities/cmc_multi_res_entropy_coder.hxx \
src/utilities/cmc_prefix_compression_entropy_alphabet.hxx \
src/utilities/cmc_prefix_entropy_coder.hxx \
src/utilities/cmc_iface_arithmetic_encoding_freq_model.hxx \
src/utilities/cmc_embedded_mesh_utilities.hxx \
src/utilities/cmc_embedded_variable_attributes.hxx \
src/mpi/cmc_mpi_io.hxx \
src/mpi/cmc_mpi.hxx \
src/mpi/cmc_mpi_data.hxx \
src/netcdf/cmc_netcdf.hxx \
src/netcdf/cmc_nc_io.hxx \
src/netcdf/cmc_nc_io_conventions.hxx \
src/netcdf/cmc_nc_writer.hxx \
src/netcdf/cmc_nc_reader.hxx \
src/input/cmc_netcdf.hxx \
src/input/cmc_input_variable.hxx \
src/input/cmc_forward_decl_input_variable.hxx \
src/input/cmc_binary_reader.hxx \
src/input/cmc_binary_reader_forward.hxx \
src/t8code/cmc_t8_mesh.hxx \
src/t8code/cmc_t8_interpolation.hxx \
src/t8code/cmc_t8_adapt_track_inaccuracy.hxx \
src/t8code/cmc_t8_morton.hxx \
src/t8code/cmc_t8_mpi.hxx \
src/t8code/cmc_t8_adaptation_callbacks.hxx \
src/lossy/cmc_ac_compression_variable.hxx \
src/lossy/cmc_adaptive_coarsening.hxx \
src/lossless/cmc_byte_compression_variable.hxx \
src/lossless/cmc_embedded_byte_compression_variable.hxx \
src/lossless/cmc_embedded_byte_decompression_variable.hxx \
src/lossless/cmc_embedded_prefix_extraction_compression.hxx \
src/lossless/cmc_embedded_prefix_extraction_decompression.hxx \
src/lossless/cmc_prefix_extraction_compression.hxx \
src/lossless/cmc_multi_res_extraction_compression.hxx \
src/lossless/cmc_multi_res_extraction_decompression.hxx \
src/lossless/cmc_multi_res_extraction_residual_computation.hxx \
src/lossless/cmc_prefix_extraction_decompression.hxx \
src/lossless/cmc_byte_decompression_variable.hxx \
src/mesh_compression/cmc_iface_abstract_mesh_encoder.hxx \
src/mesh_compression/cmc_iface_abstract_mesh_decoder.hxx \
src/mesh_compression/cmc_iface_mesh_encoder.hxx \
src/mesh_compression/cmc_iface_mesh_decoder.hxx \
src/mesh_compression/cmc_mesh_encoder.hxx \
src/mesh_compression/cmc_mesh_decoder.hxx \
src/mesh_compression/cmc_iface_embedded_mesh_encoder.hxx \
src/mesh_compression/cmc_iface_embedded_mesh_decoder.hxx \
src/mesh_compression/cmc_embedded_mesh_encoder.hxx \
src/mesh_compression/cmc_embedded_mesh_decoder.hxx \
src/compression_io/cmc_compression_output.hxx \
src/compression_io/cmc_compression_attr_names.hxx \
src/compression_io/cmc_decompression_input.hxx \
src/compression_io/cmc_byte_compression_output.txx \
src/compression_io/cmc_embedded_byte_compression_output.txx


src_libcmc_la_SOURCES = src/cmc.cxx \
src/utilities/cmc_utilities.cxx \
src/utilities/cmc_compression_settings.cxx \
src/utilities/cmc_geo_domain.cxx \
src/utilities/cmc_hyperslab.cxx \
src/utilities/cmc_input_variable.cxx \
src/utilities/cmc_cart_coordinate.cxx \
src/utilities/cmc_geo_utilities.cxx \
src/mpi/cmc_mpi.cxx \
src/mpi/cmc_mpi_io.cxx \
src/mpi/cmc_mpi_data.cxx \
src/netcdf/cmc_netcdf.cxx \
src/netcdf/cmc_nc_writer.cxx \
src/netcdf/cmc_nc_io.cxx \
src/netcdf/cmc_nc_reader.cxx \
src/t8code/cmc_t8_mesh.cxx \
src/t8code/cmc_t8_interpolation.cxx \
src/t8code/cmc_t8_adapt_track_inaccuracy.cxx \
src/t8code/cmc_t8_morton.cxx \
src/t8code/cmc_t8_mpi.cxx \
src/input/cmc_netcdf.cxx \
src/input/cmc_input_variable.cxx \
src/lossy/cmc_adaptive_coarsening.cxx

src_libcmc_la_CPPFLAGS = $(AM_CPPFLAGS)
src_libcmc_la_LDFLAGS = $(AM_LDFLAGS)
src_libcmc_la_CXXFLAGS = $(AM_CXXFLAGS)
src_libcmc_la_CFLAGS = $(CMC_CFLAGS)
if ENABLE_FORTRAN
src_libcmc_la_FCFLAGS = $(AM_FCFLAGS)
src_libcmc_la_FFLAGS = $(CMC_FFLAGS)
endif
src_libcmc_la_LIBFLAGS = $(NETCDF_LIBFLAGS) $(T8CODE_LIBFLAGS) @CMC_LDADD_T8_SUBMODULE@
src_libcmc_la_LIBADD = @CMC_LDADD_T8_SUBMODULE@
EXTRA_src_libcmc_la_DEPENDENCIES = @CMC_LDADD_T8_SUBMODULE@

LDADD += @top_builddir@/src/libcmc.la @CMC_LDADD_T8_SUBMODULE@

AM_CPPFLAGS += -I@top_srcdir@/src @CMC_T8_CPPFLAGS@
