#flags_ld_testing = $(AM_LDFLAGS)
#flags_cpp_testing = $(AM_CPPFLAGS)
#flags_cxx_testing = $(AM_CXXFLAGS)

cmc_test_programs = test/cmc_create_compression_settings \
test/cmc_create_input_variables \
test/cmc_transform_input_var_coordinates \
test/cmc_create_error_domains \
test/cmc_create_compression_data \
test/cmc_setup_compression_data \
test/cmc_scaling_and_offset_for_input_var \
test/cmc_split_variables \
test/cmc_lossy_amr_compression \
test/cmc_prefix \
test/cmc_nc_data_output_input \
test/cmc_bitmap \
test/cmc_bitvector_view \
test/cmc_arithmetic_coding \
test/cmc_initial_mesh_coverage \
test/cmc_serialize_value \
test/cmc_binary_reader \
test/cmc_adaptive_coarsening_variable \
test/cmc_compression_settings \
test/cmc_byte_compression_value \
test/cmc_arithmetic_encoding \
test/cmc_prefix_compression_variable \
test/cmc_multi_res_compression_variable \
test/cmc_multi_res_compression_arithmetic_coding \
test/cmc_prefix_compression_arithmetic_coding

test_cmc_create_compression_settings_SOURCES = test/cmc_create_compression_settings.cxx
test_cmc_create_input_variables_SOURCES = test/cmc_create_input_variables.cxx
test_cmc_transform_input_var_coordinates_SOURCES = test/cmc_transform_input_var_coordinates.cxx
test_cmc_create_error_domains_SOURCES = test/cmc_create_error_domains.cxx
test_cmc_create_compression_data_SOURCES = test/cmc_create_compression_data.cxx
test_cmc_setup_compression_data_SOURCES = test/cmc_setup_compression_data.cxx
test_cmc_scaling_and_offset_for_input_var_SOURCES = test/cmc_scaling_and_offset_for_input_var.cxx
test_cmc_split_variables_SOURCES = test/cmc_split_variables.cxx
test_cmc_lossy_amr_compression_SOURCES = test/cmc_lossy_amr_compression.cxx
test_cmc_prefix_SOURCES = test/cmc_prefix.cxx
test_cmc_nc_data_output_input_SOURCES = test/cmc_nc_data_output_input.cxx
test_cmc_bitmap_SOURCES = test/cmc_bitmap.cxx
test_cmc_bitvector_view_SOURCES = test/cmc_bitvector_view.cxx
test_cmc_arithmetic_coding_SOURCES = test/cmc_arithmetic_coding.cxx
test_cmc_initial_mesh_coverage_SOURCES = test/cmc_initial_mesh_coverage.cxx
test_cmc_serialize_value_SOURCES = test/cmc_serialize_value.cxx
test_cmc_binary_reader_SOURCES = test/cmc_binary_reader.cxx
test_cmc_adaptive_coarsening_variable_SOURCES = test/cmc_adaptive_coarsening_variable.cxx
test_cmc_compression_settings_SOURCES = test/cmc_compression_settings.cxx
test_cmc_byte_compression_value_SOURCES = test/cmc_byte_compression_value.cxx
test_cmc_arithmetic_encoding_SOURCES = test/cmc_arithmetic_encoding.cxx
test_cmc_prefix_compression_variable_SOURCES = test/cmc_prefix_compression_variable.cxx
test_cmc_multi_res_compression_variable_SOURCES = test/cmc_multi_res_compression_variable.cxx
test_cmc_multi_res_compression_arithmetic_coding_SOURCES = test/cmc_multi_res_compression_arithmetic_coding.cxx
test_cmc_prefix_compression_arithmetic_coding_SOURCES = test/cmc_prefix_compression_arithmetic_coding.cxx

check_PROGRAMS += $(cmc_test_programs)
TESTS += $(cmc_test_programs)
