set(WORKFLOWS_CMC_PATCH_BIN_DIR ${CMAKE_INSTALL_BINDIR}/patch)

# Lossless Patch-based prefix extraction compression 
set(WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION cmc_lossless_prefix_extraction_compression)
add_executable(${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/patch/cmc_lossless_prefix_extraction_compression.cxx)
target_link_libraries(${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} PUBLIC cmc)
target_include_directories(${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${WORKFLOWS_CMC_PATCH_BIN_DIR}")
install(TARGETS ${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} DESTINATION ${WORKFLOWS_CMC_PATCH_BIN_DIR})

# Lossless Patch-Based decompression
set(WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION cmc_lossless_decompression)
add_executable(${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/patch/cmc_lossless_decompression.cxx)
target_link_libraries(${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} PUBLIC cmc)
target_include_directories(${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${WORKFLOWS_CMC_PATCH_BIN_DIR}")
install(TARGETS ${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} DESTINATION ${WORKFLOWS_CMC_PATCH_BIN_DIR})
