set(CMC_WORKFLOWS_BIN_DIR ${CMAKE_INSTALL_BINDIR}/workflows)
set(CMC_WORKFLOWS_PATCH_BIN_DIR ${CMC_WORKFLOWS_BIN_DIR}/patch)

get_filename_component(CMC_WORKFLOWS_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt" DIRECTORY)
file(RELATIVE_PATH CMC_WORKFLOWS_RELATIVE_DIR "${CMAKE_SOURCE_DIR}" "${CMC_WORKFLOWS_SOURCE_DIR}")
set(CMC_WORKFLOWS_BUILD_DIR "${CMAKE_BINARY_DIR}/${CMC_WORKFLOWS_RELATIVE_DIR}")
set(CMC_WORKFLOWS_PATCH_BUILD_DIR ${CMC_WORKFLOWS_BUILD_DIR}/patch)

# Lossless Patch-based prefix extraction compression 
set(WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION cmc_lossless_prefix_extraction_compression)
add_executable(${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/patch/cmc_lossless_prefix_extraction_compression.cxx)
target_link_libraries(${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} PUBLIC cmc)
target_include_directories(${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMC_WORKFLOWS_PATCH_BUILD_DIR}")
install(TARGETS ${WORKFLOWS_CMC_PATCH_LOSSLESS_PREFIX_EXTRACTION_COMPRESSION} DESTINATION ${CMC_WORKFLOWS_PATCH_BIN_DIR})

# Lossless Patch-based multi res extraction compression 
set(WORKFLOWS_CMC_PATCH_LOSSLESS_MULTI_RES_EXTRACTION_COMPRESSION cmc_lossless_multi_res_extraction_compression)
add_executable(${WORKFLOWS_CMC_PATCH_LOSSLESS_MULTI_RES_EXTRACTION_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/patch/cmc_lossless_multi_res_extraction_compression.cxx)
target_link_libraries(${WORKFLOWS_CMC_PATCH_LOSSLESS_MULTI_RES_EXTRACTION_COMPRESSION} PUBLIC cmc)
target_include_directories(${WORKFLOWS_CMC_PATCH_LOSSLESS_MULTI_RES_EXTRACTION_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${WORKFLOWS_CMC_PATCH_LOSSLESS_MULTI_RES_EXTRACTION_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMC_WORKFLOWS_PATCH_BUILD_DIR}")
install(TARGETS ${WORKFLOWS_CMC_PATCH_LOSSLESS_MULTI_RES_EXTRACTION_COMPRESSION} DESTINATION ${CMC_WORKFLOWS_PATCH_BIN_DIR})

# Lossless Patch-Based decompression
set(WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION cmc_lossless_decompression)
add_executable(${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/patch/cmc_lossless_decompression.cxx)
target_link_libraries(${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} PUBLIC cmc)
target_include_directories(${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMC_WORKFLOWS_PATCH_BUILD_DIR}")
install(TARGETS ${WORKFLOWS_CMC_PATCH_LOSSLESS_DECOMPRESSION} DESTINATION ${CMC_WORKFLOWS_PATCH_BIN_DIR})

# Comaprison of intial and lossless decompressed data for comparison of binary files
set(WORKFLOWS_COMPARE_LOSSLESS_DECOMPRESSION_OUTPUT cmc_compare_lossless_decompression_output)
add_executable(${WORKFLOWS_COMPARE_LOSSLESS_DECOMPRESSION_OUTPUT} ${CMAKE_CURRENT_LIST_DIR}/cmc_compare_lossless_decompression_output.cxx)
target_link_libraries(${WORKFLOWS_COMPARE_LOSSLESS_DECOMPRESSION_OUTPUT} PUBLIC cmc )
target_include_directories(${WORKFLOWS_COMPARE_LOSSLESS_DECOMPRESSION_OUTPUT} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${WORKFLOWS_COMPARE_LOSSLESS_DECOMPRESSION_OUTPUT} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMC_WORKFLOWS_BUILD_DIR}")
install(TARGETS ${WORKFLOWS_COMPARE_LOSSLESS_DECOMPRESSION_OUTPUT} DESTINATION ${CMC_WORKFLOWS_BIN_DIR})